src/objects/ACET_FACETS_Codes__mdt.object
<CustomObject>
    <description>US2584790

Used to map Contact type values to FACETS Caller Type (tbd)</description>
    <fields>
        <fullName>ACET_Input__c</fullName>
        <label>ACET Input</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FACETS_Code__c</fullName>
        <description>FACETS Code</description>
        <label>FACETS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <type>TextArea</type>
    </fields>
    <label>ACET FACETS Code</label>
    <listViews>
        <fullName>all</fullName>
        <columns>DeveloperName</columns>
        <columns>category__c</columns>
        <columns>ACET_Input__c</columns>
        <columns>FACETS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ACET FACETS Codes</pluralLabel>
</CustomObject>